dev/alb.tf
resource "aws_lb" "this" {
  name               = "my-lb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb.id]
  subnets            = data.aws_subnet_ids.this.ids

  enable_deletion_protection = false

  access_logs {
    bucket = aws_s3_bucket.lb_logs.bucket
  }

  tags = {
    Environment = "production"
  }
}

# resource "aws_lb_listener" "http" {
#   load_balancer_arn = aws_lb.this.arn

#   port     = 80
#   protocol = "HTTP"

#   default_action {
#     type             = "forward"
#     target_group_arn = aws_lb_target_group.nginx.arn
#   }
# }

# resource "aws_lb_target_group" "nginx" {
#   name        = "tg-nginx-80"
#   port        = 80
#   protocol    = "HTTP"
#   target_type = "ip"
#   vpc_id      = data.aws_vpc.this.id
# }
